--- a/pis.html
+++ b/pis.html
@@ -113,7 +113,6 @@
             <div class="carousel-item-b">
               <img src="img/slide-3.jpg" alt="">
             </div>
-
           </div>
           <div class="row justify-content-between">
             <div class="col-md-7 col-lg-7 section-md-t3">
@@ -135,8 +134,7 @@
                 </div>
               </div>
               <div   class="amenities-list color-text-a w-100">
-                <ul id="amenities" class="list-a no-margin w-100">
-                  </ul>
+                <ul id="amenities" class="list-a no-margin w-100"></ul>
               </div>
             </div>
             <div class="col-md-5 col-lg-4">
