--- a/pis.html
+++ b/pis.html
@@ -106,14 +106,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div id="property-single-carousel" class="owl-carousel owl-arrow gallery-property">
-            <div class="carousel-item-b">
-              <img src="img/slide-2.jpg" alt="">
-            </div>
-            <div class="carousel-item-b">
-              <img src="img/slide-3.jpg" alt="">
-            </div>
-          </div>
+          <div id="carousel-wrapper"></div>
           <div class="row justify-content-between">
             <div class="col-md-7 col-lg-7 section-md-t3">
               <div class="row">
