--- a/pis.html
+++ b/pis.html
@@ -209,7 +209,7 @@
             </div>
             <div class="col-md-12 col-lg-4">
               <div class="property-contact">
-                <form class="form-a">
+                <form class="form-a" id="contact-form">
                   <div class="row">
                     <div class="col-md-12 mb-1">
                       <div class="form-group">
@@ -219,7 +219,7 @@
                     </div>
                     <div class="col-md-12 mb-1">
                       <div class="form-group">
-                        <input type="email" class="form-control form-control-lg form-control-a" id="inputEmail1"
+                        <input type="email" class="form-control form-control-lg form-control-a" id="inputEmail"
                           placeholder="Correu *" required>
                       </div>
                     </div>
@@ -328,6 +328,10 @@
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/scrollreveal/scrollreveal.min.js"></script>
+
+  <!-- custom -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
 
