--- a/pisos.html
+++ b/pisos.html
@@ -89,7 +89,7 @@
               <a href="#">Inici</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              Properties Grid
+              Projectes
             </li>
           </ol>
         </nav>
