--- a/contact.html
+++ b/contact.html
@@ -335,6 +335,9 @@
 <!-- Contact Form JavaScript File -->
 <script src="contactform/contactform.js"></script>
 
+<!-- custom -->
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
 <!-- Template Main Javascript File -->
 <script src="js/main.js"></script>
 <script src="js/contact.js"></script>
