Add existing file

--- a/contact.html
+++ b/contact.html
@@ -57,10 +57,10 @@
           <a class="nav-link" href="index.html">Inici</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">Qui som</a>
+          <a class="nav-link" href="about.html">Coneix-nos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="pisos.html">Projectes</a>
+          <a class="nav-link" href="pisos.html">Autopromocions</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="contact.html">Contacte</a>
@@ -193,7 +193,7 @@
                     <span class="color-a">info@pisosautopromocio.cat</span>
                   </p>
                   <p class="mb-1">Telf.
-                    <span class="color-a">936 630 212</span>
+                    <span class="color-a">675 33 46 36</span>
                   </p>
                 </div>
               </div>
@@ -208,8 +208,7 @@
                 </div>
                 <div class="icon-box-content">
                   <p class="mb-1">
-                    C/ Dr. Flemming 12
-                    <br> 08765 Sant Vicenç dels Horts,
+                    <br> 08620 Sant Vicenç dels Horts,
                     <br> Barcelona
                   </p>
                 </div>
@@ -278,12 +277,9 @@
               </div>
               <div class="w-footer-a">
                 <ul class="list-unstyled">
-                  <li class="color-a"> C/ Dr. Flemming 12</li>
-                  <li class="color-a">08765 Sant Vicenç dels Horts, Barcelona</li>
-                  <li></li>
-                  <span class="color-text-a"> L'horari d'oficina és de dilluns a divendres de 09:00 a 18:00. </span>
+                  <li class="color-a">08620 Sant Vicenç dels Horts, Barcelona</li> 
                   <li class="color-a"><span class="color-text-a">Correu:</span> info@pisosautopromocio.cat</li>
-                  <li class="color-a"><span class="color-text-a">Tel:</span> 936 630 212</li>
+                  <li class="color-a"> <span class="color-text-a">Tel:</span> 675 33 46 36</li>
                 </ul>
               </div>
             </div>
