--- a/pisos.html
+++ b/pisos.html
@@ -57,10 +57,10 @@
           <a class="nav-link" href="index.html">Inici</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">Qui som</a>
+          <a class="nav-link" href="about.html">Coneix-nos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="pisos.html">Projectes</a>
+          <a class="nav-link active" href="pisos.html">Autopromocions</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contacte</a>
@@ -78,7 +78,7 @@
     <div class="row">
       <div class="col-md-12 col-lg-8">
         <div class="title-single-box">
-          <h1 class="title-single">Projectes</h1>
+          <h1 class="title-single">Autopromocions</h1>
           <span class="color-text-a"></span>
         </div>
       </div>
@@ -89,7 +89,7 @@
               <a href="#">Inici</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">
-              Projectes
+              Autopromocions
             </li>
           </ol>
         </nav>
@@ -132,14 +132,11 @@
               </div>
               <div class="w-footer-a">
                 <ul class="list-unstyled">
-                  <li class="color-a"> C/ Dr. Flemming 12</li>
-                  <li class="color-a">08765 Sant Vicenç dels Horts, Barcelona</li>
-                  <li></li>
-                  <span class="color-text-a"> L'horari d'oficina és de dilluns a divendres de 09:00 a 18:00. </span>
+                  <li class="color-a">08620 Sant Vicenç dels Horts, Barcelona</li> 
                   <li class="color-a"><span class="color-text-a">Correu:</span> info@pisosautopromocio.cat</li>
-                  <li class="color-a"><span class="color-text-a">Tel:</span> 936 630 212</li>
-
-
+                  <li class="color-a"> <span class="color-text-a">Tel:</span> 675 33 46 36</li>
+                  
+                    
                 </ul>
               </div>
             </div>
