--- a/contact.html
+++ b/contact.html
@@ -78,8 +78,12 @@
     <div class="row">
       <div class="col-md-12 col-lg-8">
         <div class="title-single-box">
-          <h1 class="title-single">Contact US</h1>
-          <span class="color-text-a">Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti. Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.</span>
+          <h1 class="title-single">Contacta'ns</h1>
+          <span class="color-text-a">
+            Aut voluptas consequatur unde sed omnis ex placeat quis eos. Aut natus officia corrupti qui autem fugit
+            consectetur quo. Et ipsum eveniet laboriosam voluptas beatae possimus qui ducimus. Et voluptatem deleniti.
+            Voluptatum voluptatibus amet. Et esse sed omnis inventore hic culpa.
+          </span>
         </div>
       </div>
       <div class="col-md-12 col-lg-4">
@@ -105,8 +109,9 @@
         <div class="contact-map box">
           <div id="map" class="contact-map">
             <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3022.1422937950147!2d-73.98731968482413!3d40.75889497932681!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25855c6480299%3A0x55194ec5a1ae072e!2sTimes+Square!5e0!3m2!1ses-419!2sve!4v1510329142834"
-              width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+              src="https://maps.google.com/maps?q=Sant+Vicents+dels+Horts&t=&z=13&ie=UTF8&iwloc=&output=embed"
+              width="100%" height="450" frameborder="0" style="border:0" allowfullscreen
+            ></iframe>
           </div>
         </div>
       </div>
@@ -277,7 +282,7 @@
               </div>
               <div class="w-footer-a">
                 <ul class="list-unstyled">
-                  <li class="color-a">08620 Sant Vicenç dels Horts, Barcelona</li> 
+                  <li class="color-a">08620 Sant Vicenç dels Horts, Barcelona</li>
                   <li class="color-a"><span class="color-text-a">Correu:</span> info@pisosautopromocio.cat</li>
                   <li class="color-a"> <span class="color-text-a">Tel:</span> 675 33 46 36</li>
                 </ul>
