--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
 <section class="contact">
   <div class="container">
     <div class="row">
-      <div class="col-sm-12 section-t8">
+      <div class="col-sm-12 section-t8 pt-0">
         <div class="row">
           <div class="col-md-7">
             <form id="contact-form" class="form-a contactForm">
