--- a/about.html
+++ b/about.html
@@ -63,6 +63,9 @@
           <li class="nav-item">
             <a class="nav-link active" href="about.html">Coneix-nos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faqs.html">Preguntes freqüents</a>
+          </li>
           
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacte</a>
@@ -123,7 +126,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Enric Jr.
+                    <a href="agent-single.html" class="link-two">Enric Chavarria Gran
                      </a>
                   </h3>
                 </div>
@@ -151,7 +154,7 @@
               <div class="card-header-d">
                 <div class="card-title-d align-self-center">
                   <h3 class="title-d">
-                    <a href="agent-single.html" class="link-two">Enric Sr.
+                    <a href="agent-single.html" class="link-two">Enric Chavarria Casanovas
                      </a>
                   </h3>
                 </div>
@@ -478,7 +481,7 @@
               </div>
               <div class="w-body-a">
                 <p class="w-text-a color-text-a">
-                  Eisengrim Serveis Tècnics S.L.
+                 Catalana d'Autopromoció
                 </p>
               </div>
               <div class="w-footer-a">
