--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">Coneix-nos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faqs.html">Preguntes freqüents</a>
+          </li>
           
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacte</a>
@@ -142,7 +145,7 @@
                 </div>
                 <div class="w-body-a">
                   <p class="w-text-a color-text-a">
-                    Eisengrim Serveis Tècnics S.L.
+                    Catalana d'Autopromoció
                   </p>
                 </div>
                 <div class="w-footer-a">
