--- a/contact.html
+++ b/contact.html
@@ -62,6 +62,9 @@
         <li class="nav-item">
           <a class="nav-link" href="about.html">Coneix-nos</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="faqs.html">Preguntes freqüents</a>
+        </li>
         
         <li class="nav-item">
           <a class="nav-link active" href="contact.html">Contacte</a>
@@ -277,7 +280,7 @@
               </div>
               <div class="w-body-a">
                 <p class="w-text-a color-text-a">
-                  Eisengrim Serveis Tècnics S.L.
+                  Catalana d'Autopromoció
                 </p>
               </div>
               <div class="w-footer-a">
