--- a/pis.html
+++ b/pis.html
@@ -63,6 +63,9 @@
           <li class="nav-item">
             <a class="nav-link" href="about.html">Coneix-nos</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="faqs.html">Preguntes freqüents</a>
+          </li>
           
           <li class="nav-item">
             <a class="nav-link" href="contact.html">Contacte</a>
@@ -107,7 +110,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-12">
-          <div id="carousel-wrapper"></div>
+          
           <div class="row justify-content-between">
             <div class="col-md-7 col-lg-7 section-md-t3">
               <div class="row">
@@ -134,16 +137,18 @@
             <div class="col-md-5 col-lg-4">
               <div class="property-price d-flex justify-content-center foo">
                 <div class="card-header-c d-flex">
-                  <div class="card-box-ico">
-                    <span class="ion-money"></span>
+                  <div>
+                    <span ></span>
                   </div>
-                  <div class="card-title-c align-self-center">
+                  <div class="title align-self-center">
                     <h5 id="minprice" class="title-c"></h5>
                   </div>
                 </div>
               </div>
             </div>
           </div>
+          <br>
+          <div id="carousel-wrapper"></div>
         </div>
         <div class="col-md-12">
           <div class="row section-t3">
@@ -265,7 +270,7 @@
                 </div>
                 <div class="w-body-a">
                   <p class="w-text-a color-text-a">
-                    Eisengrim Serveis Tècnics S.L.
+                    Catalana d'Autopromoció
                   </p>
                 </div>
                 <div class="w-footer-a">
