video vimeo i treure social networks

--- a/contact.html
+++ b/contact.html
@@ -208,6 +208,9 @@
                 </div>
               </div>
             </div>
+
+            <!--/ social network /
+
             <div class="icon-box">
               <div class="icon-box-icon">
                 <span class="ion-ios-redo"></span>
@@ -239,6 +242,10 @@
                 </div>
               </div>
             </div>
+            -->
+           
+
+
           </div>
          
           <div class="col-sm-12">
@@ -296,6 +303,7 @@
       </div>
     </div>
   </div>
+  <!--/ social network /
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -322,6 +330,8 @@
       </div>
     </div>
   </div>
+  -->
+
 </footer>
 <!--/ Footer End /-->
 
