--- a/about.html
+++ b/about.html
@@ -499,6 +499,7 @@
       </div>
     </div>
   </div>
+  <!--/ social network /
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -525,6 +526,7 @@
       </div>
     </div>
   </div>
+  -->
 </footer>
 <!--/ Footer End /-->
 
