--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
           <h1 class="title-single">Com ho fem</h1>
           <br>
           <span class="color-text-a">
-            <iframe width="100%" height="320" src="https://www.youtube.com/embed/VMp6pq6_QjI">
-            </iframe>
+            <iframe src="https://player.vimeo.com/video/489202795" width="100%" height="500" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+<p><a href="https://vimeo.com/489202795"></a></p>
           </span>
         </div>
         <br>
@@ -163,31 +163,34 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="socials-a">
-            <ul class="list-inline">
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-facebook" aria-hidden="true"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-twitter" aria-hidden="true"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a href="#">
-                  <i class="fa fa-instagram" aria-hidden="true"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
+    <!--/ social network /
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="socials-a">
+          <ul class="list-inline">
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fa fa-twitter" aria-hidden="true"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#">
+                <i class="fa fa-instagram" aria-hidden="true"></i>
+              </a>
+            </li>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
+  </div>
+  -->
   </footer>
   <!--/ Footer End /-->
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
