--- a/pisos.html
+++ b/pisos.html
@@ -149,6 +149,7 @@
       </div>
     </div>
   </div>
+  <!--/ social network /
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -175,6 +176,7 @@
       </div>
     </div>
   </div>
+  -->
 </footer>
 <!--/ Footer End /-->
 
