clicar imatges es link

--- a/about.html
+++ b/about.html
@@ -180,7 +180,8 @@
   </section>
   <!--/ Team End /-->
 
-  <!--/ Avantatges Star /-->
+
+  <!--/ Avantatges Star 
   <section class="section-agents section-t8">
     <div class="container">
     <div class="row">
@@ -218,6 +219,9 @@
       </div>
     </div>
   </section>
+  
+  /-->
+      
 
   <!--/ Experiencia Star /-->
 <section class="section-agents section-t8">
