retocs text foto mes separat

--- a/contact.html
+++ b/contact.html
@@ -165,8 +165,14 @@
                           placeholder="Missatge"
                         ></textarea>
                     <div class="validation"></div>
+                    <br>
+                    <a href="docs/POLÍTICA_DE_PRIVACIDAD.pdf" download>
+                      Fent servir aquest formulari esteu acceptant la nostra política de privacitat.
+                    </a>
+                    <br>
                   </div>
                 </div>
+
                 <div class="col-md-12">
                   <button type="submit" class="btn btn-a">Envia!</button>
                 </div>
