new image in pis page

--- a/pis.html
+++ b/pis.html
@@ -105,6 +105,11 @@
   </section>
   <!--/ Intro Single End /-->
 
+  <section class="col-md-12 pb-4">
+    <div id="grid-image-wrapper" class="container text-center">
+    </div>
+  </section>
+
   <!--/ Property Single Star /-->
   <section class="property-single nav-arrow-b">
     <div class="container">
